# ldtab.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: create-artifacts.yml
src/: lib.rs  main.rs
src/import/: import.rs
src/ofn2owl/: annotation_transducer.rs  axiom_transducer.rs  expression_transducer.rs  util.rs
src/ofn_2_owl/: annotation_transducer.rs  axiom_transducer.rs  expression_transducer.rs  mod.rs  transducer.rs
src/owl2ofn/: annotation_transducer.rs  axiom_transducer.rs  expression_transducer.rs  mod.rs  transducer.rs
src/owl_2_ofn/: annotation_transducer.rs  axiom_transducer.rs  expression_transducer.rs  transducer.rs
src/xml/: parser.rs
tests/: test_owl_2_ofn.rs
