[package]
name = "ldtab_rs"
version = "0.1.0"
authors = ["chris <chris.kind.man@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiring_rs = { path = "../wiring.rs" }
serde = { version = "1.0", features = ["derive"] }
regex = "1.6.0"
serde_json = "1.0"
horned-owl = "0.12.0"
im = "15.1.0"
itertools = "0.10.3"
rio_api = "0.7.1"
rio_xml = "0.7.3"
